fixed zooming out leaving white spaces error

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body{
     background-color: rgb(33, 46, 68);
     color: white;
     align-items: center;
+    /* flex: 1; */
     
 }
 
@@ -23,6 +24,7 @@ body{
     padding: 50px;
     gap: 64px;
     border-top: 12px solid black;
+    flex: 1;  /*flex: 1 is in child elemnents of mid. after you make the container. choose one or how ever many to be effected by flex: 1 in container */
    
 }
 
@@ -33,8 +35,8 @@ body{
     color: black;
     padding: 100px;
     justify-content: center;
-  
     border-bottom: 12px solid black;
+    flex: 1;
 }
 
 .four-quarter{
@@ -43,7 +45,8 @@ body{
     background-color: rgb(33, 46, 68);
     color: white;
     justify-content: center;
-    padding: 50px
+    padding: 50px;
+    /* flex: 1; */
 }
 
 /*end of styles for each quarter of page*/
@@ -56,6 +59,7 @@ body{
     font-size: 34px;
     gap: 1200px;
     padding: 24px;
+    flex: 1;
     
     
 }
@@ -66,6 +70,7 @@ body{
     font-size: 20px;
     font-weight: 200;
     gap: 16px;
+    flex: 1;
     
 }
 
@@ -194,4 +199,10 @@ ul{
 a{
     text-decoration: none;
     color: white;
+}
+
+.mid{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
 }
